{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 38,
  "lineage": "7cc641d4-c36c-1b95-e63f-9793427162da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:internet-gateway/igw-0603b96d22cec76cb",
            "id": "igw-0603b96d22cec76cb",
            "owner_id": "058264063381",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-automation-deployment-igw"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-igw"
            },
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "igw-0603b96d22cec76cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:loadbalancer/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29",
            "arn_suffix": "app/aws-automation-deployment-alb/cc5ebd9e44ac8d29",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-automation-deployment-alb-213765898.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264063381:loadbalancer/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-automation-deployment-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c7aaabf6cf1e4c3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d695c4fcef20b7c"
              },
              {
                "subnet_id": "subnet-045b271489f5dcbca"
              }
            ],
            "subnets": [
              "subnet-00d695c4fcef20b7c",
              "subnet-045b271489f5dcbca"
            ],
            "tags": {
              "Name": "aws-automation-deployment-alb"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-alb"
            },
            "vpc_id": "vpc-05e24cbd2d5f87b80",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:loadbalancer/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:listener/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29/5365f72d0f606c4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:targetgroup/aws-automation-deployment-tg/df0ccaeb54311cf1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264063381:listener/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29/5365f72d0f606c4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:loadbalancer/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:listener/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29/5365f72d0f606c4a"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:targetgroup/aws-automation-deployment-tg/df0ccaeb54311cf1",
            "arn_suffix": "targetgroup/aws-automation-deployment-tg/df0ccaeb54311cf1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264063381:targetgroup/aws-automation-deployment-tg/df0ccaeb54311cf1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:058264063381:loadbalancer/app/aws-automation-deployment-alb/cc5ebd9e44ac8d29"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-automation-deployment-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws-automation-deployment-tg"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264063381:targetgroup/aws-automation-deployment-tg/df0ccaeb54311cf1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:route-table/rtb-0de99fbfccfb2bf84",
            "id": "rtb-0de99fbfccfb2bf84",
            "owner_id": "058264063381",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0603b96d22cec76cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_automation-deployment-public-rt"
            },
            "tags_all": {
              "Name": "aws_automation-deployment-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "rtb-0de99fbfccfb2bf84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ac09fd7c3ea8c62",
            "region": "us-east-1",
            "route_table_id": "rtb-0de99fbfccfb2bf84",
            "subnet_id": "subnet-045b271489f5dcbca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "rtbassoc-01ac09fd7c3ea8c62",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3a5785093648339",
            "region": "us-east-1",
            "route_table_id": "rtb-0de99fbfccfb2bf84",
            "subnet_id": "subnet-00d695c4fcef20b7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "rtbassoc-0e3a5785093648339",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:security-group/sg-0c7aaabf6cf1e4c3b",
            "description": "Allow inboud HTTP traffic to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7aaabf6cf1e4c3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-automation-deployment-alb-sb",
            "name_prefix": "",
            "owner_id": "058264063381",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-automation-deployment-alb-sg"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "sg-0c7aaabf6cf1e4c3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:security-group/sg-04e766a92ef89d6b9",
            "description": "Allow inbound traffics from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e766a92ef89d6b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7aaabf6cf1e4c3b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "aws-automation-deployment-ecs-sg",
            "name_prefix": "",
            "owner_id": "058264063381",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-automation-deployment-ecs-sg"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "sg-04e766a92ef89d6b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:subnet/subnet-0b82973dad0c98750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b82973dad0c98750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264063381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-automation-deployment-private-subnet"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-private-subnet"
            },
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "subnet-0b82973dad0c98750",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:subnet/subnet-045b271489f5dcbca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b271489f5dcbca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264063381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-autoamtion-deployment-public-subnet"
            },
            "tags_all": {
              "Name": "aws-autoamtion-deployment-public-subnet"
            },
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "subnet-045b271489f5dcbca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:subnet/subnet-00d695c4fcef20b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d695c4fcef20b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264063381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-automation-deployment-public-subnet-2"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-public-subnet-2"
            },
            "vpc_id": "vpc-05e24cbd2d5f87b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "subnet-00d695c4fcef20b7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264063381:vpc/vpc-05e24cbd2d5f87b80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0019a3064493c8219",
            "default_route_table_id": "rtb-0886b10ea953c34fa",
            "default_security_group_id": "sg-0bacedbbe89b02463",
            "dhcp_options_id": "dopt-04911e18e784b03d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e24cbd2d5f87b80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0886b10ea953c34fa",
            "owner_id": "058264063381",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-automation-deployment-vpc"
            },
            "tags_all": {
              "Name": "aws-automation-deployment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264063381",
            "id": "vpc-05e24cbd2d5f87b80",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}